rfc2629.dtd: Redirect to cvs repository

--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ AddType application/x-rfc-translation+xml .rfcja
 AddCharset iso-2022-jp .rfcja
 AddLanguage ja,en .rfcja
 
-Redirect /~wakaba/documents/rfc-ja/rfc2629.dtd http://suika.fam.cx/gate/cvs/*checkout*/markup/rfc/dtd/2629ja/rfc.dtd
+Redirect /~wakaba/documents/rfc-ja/rfc2629.dtd http://suika.fam.cx/gate/cvs/*checkout*/markup/rfc/dtd/2629ja/Attic/rfc.dtd?rev=HEAD&search=None&hideattic=1&content-type=text/plain
